@@ -1,28 +1,28 @@
 package net.minestom.testing;
 
-import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.*;
 
 public interface Collector<T> {
-    @NotNull List<@NotNull T> collect();
+    List<T> collect();
 
-    default <P extends T> void assertSingle(@NotNull Class<P> type, @NotNull Consumer<P> consumer) {
+    default <P extends T> void assertSingle(Class<P> type, Consumer<P> consumer) {
         List<T> elements = collect();
         assertEquals(1, elements.size(), "Expected 1 element, got " + elements);
-        var element = elements.get(0);
+        var element = elements.getFirst();
         assertInstanceOf(type, element, "Expected type " + type.getSimpleName() + ", got " + element.getClass().getSimpleName());
+        //noinspection unchecked
         consumer.accept((P) element);
     }
 
-    default void assertSingle(@NotNull Consumer<T> consumer) {
+    default void assertSingle(Consumer<T> consumer) {
         List<T> elements = collect();
         assertEquals(1, elements.size(), "Expected 1 element, got " + elements);
-        consumer.accept(elements.get(0));
+        consumer.accept(elements.getFirst());
     }
 
     default void assertCount(int count) {
@@ -36,5 +36,32 @@ public interface Collector<T> {
 
     default void assertEmpty() {
         assertCount(0);
+    }
+
+    /**
+     * Asserts that at least one element matches the given predicate.
+     */
+    default void assertAnyMatch(Predicate<T> predicate) {
+        List<T> elements = collect();
+        assertTrue(elements.stream().anyMatch(predicate),
+                "No elements matched the predicate. Elements: " + elements);
+    }
+
+    /**
+     * Asserts that no elements match the given predicate.
+     */
+    default void assertNoneMatch(Predicate<T> predicate) {
+        List<T> elements = collect();
+        assertFalse(elements.stream().anyMatch(predicate),
+                "Found elements that matched the predicate: " + elements.stream().filter(predicate).toList());
+    }
+
+    /**
+     * Asserts that all elements match the given predicate.
+     */
+    default void assertAllMatch(Predicate<T> predicate) {
+        List<T> elements = collect();
+        assertTrue(elements.stream().allMatch(predicate),
+                "Not all elements matched the predicate. Elements: " + elements);
     }
 }
